Created JS file
Already linked

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello world!</h1>
     <p>I'm a master of git now, whatch this. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos nesciunt ea molestias sit esse perferendis hic repellendus voluptatem velit. Nam odit eius doloribus sunt fugit veniam explicabo, maiores dolore totam!</p>
+    <script src="/index.js"></script>
 </body>
 </html>
